syntax = "proto3";
package org.p8499.rpc;

message AppendEntriesRequest{
  uint64 term_id = 1;
  uint32 leader_id = 2;
}

message AppendEntriesResponse{

}

service Replication{
  rpc appendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
}